# AIDocTool

./: .gitignore  CMakeLists.txt  DEVLOG.md  FIXPLAN.md  README.md  TODO.md
include/: directorytreereader.h  filefilterutil.h  filemerger.h  filemergerwidget.h  filterrulelistwidget.h  mainwindow.h
resource/: app_icon.rc  resources.qrc
source/: directorytreereader.cpp  filefilterutil.cpp  filemerger.cpp  filemergerwidget.cpp  filterrulelistwidget.cpp  main.cpp  mainwindow.cpp
